fixed right column alignment on fullscreen

--- a/src/components/single_job_page.css
+++ b/src/components/single_job_page.css
@@ -198,6 +198,7 @@
         width: 48%;
         height:100%;
         display: inline-block;
+        margin:0%;
     }
     .modalStyle{
         width:75%;
